# jukebox-receiver

./: .bazelignore  .bazelrc  .gitignore  CMakeLists.txt  README.md  WORKSPACE  install.sh
.clwb/: .bazelproject
jukebox-receiver/: CMakeLists.txt  jukebox-receiver.cpp  jukebox-receiver.h  jukebox.proto
lib/: BUILD  jukebox-grpc.cc  jukebox-grpc.h
main/: BUILD  jukebox-receiver.cc  jukebox-receiver.h  main.cc  receiver.cc
proto/: BUILD  jukebox.proto
receiver/: BUILD  receiver.cc  receiver.h
sound/: BUILD.bazel  sound.cc  sound.h
