load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "sound",
    srcs = ["sound.cc"],
    hdrs = [
        "sound.h"
    ],
    linkopts = ["/LIBPATH C:/SDL2/lib/x64/SDL2.lib"],
    visibility = ["//receiver:__pkg__"],
    deps = [
        "//proto:jukebox_cpp_grpc",
        "@sdl2",
    ],
)
